fixing footer alignment on mobile

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -278,11 +278,13 @@ footer {
         }
         .left-foot {
             position: relative;
+            left: 0;
            
             
         }
         .right-foot {
             position: relative;
+            right: 0;
            
             
         }
